# MACC

./: .eslintignore  .gitignore  .prettierignore  Makefile  docker-compose.yml  package-lock.json  package.json
.github/agents/: copilot-instructions.md  custom.test.agent.agent.md
.specify/memory/: architecture.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  dev_token.py  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  seed_data.py  smoke_test.py
backend/alembic/: env.py
backend/alembic/versions/: a3f7c2d8e1b5_rename_initiative_fields_to_gbp.py  bed8bead71a0_initial_schema.py  c1d2e3f4a5b6_rename_context_fields_to_gbp.py  d2e3f4a5b6c7_decouple_targets_from_context.py
backend/src/: __init__.py
backend/src/api/: auth.py  context.py  deps.py  emissions.py  initiatives.py  main.py  scenarios.py  suggestions.py
backend/src/integrations/: __init__.py  openai_client.py
backend/src/models/: __init__.py  context.py  database.py  emissions.py  initiative.py  organisation.py  scenario.py  sync.py
backend/src/schemas/: context.py  emissions.py  initiatives.py  scenarios.py  suggestions.py
backend/src/services/: emissions_service.py  initiative_service.py  macc_calculator.py  scenario_service.py  suggestion_service.py  target_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_target_service.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+115 files in other folders)
